--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,22 +1,47 @@
+---
+import '@fontsource-variable/onest';
+import Header from "../components/Header.astro";
+import '../styles/global.css'
+import Footer from '../components/Footer.astro';
+---
+
 <!doctype html>
-<html lang="en">
+<html lang="es">
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width" />
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="generator" content={Astro.generator} />
-		<title>Astro Basics</title>
+		<meta name="description" content="Contrata a Agustin Meikle, un desarrollador web con experiencia en la creación de aplicaciones unidas." />
+		<title>Portfolio de Agustin Meikle - Desarrollador y Programador Web</title>
 	</head>
 	<body>
+		<!-- <div class="absolute inset-0 -z-10 h-full w-full items-center px-5 py-24 [background:radial-gradient(125%_125%_at_50%_10%,#000_40%,#63e_100%)]"></div> -->
+		<div class="absolute top-0 z-[-2] h-screen w-full bg-neutral-950 bg-[radial-gradient(ellipse_80%_80%_at_50%_-20%,rgba(120,119,198,0.3),rgba(255,255,255,0))]"></div>
+		<Header></Header>
 		<slot />
+		<Footer></Footer>
 	</body>
 </html>
 
 <style>
-	html,
+	:root{
+		color-scheme: light dark;
+	}
+	html{
+		font-family: 'Onest Variable',system-ui, sans-serif;
+		scroll-behavior: smooth;
+	}
 	body {
-		margin: 0;
-		width: 100%;
-		height: 100%;
+		background: #050505;
+		display: flex;
+		flex-direction: column;
+		min-height: 100vh;
+	}
+
+	@media (prefers-reduced-motion: reduce) {
+		html {
+			scroll-behavior: auto;
+		}
 	}
 </style>
