--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,14 +1,13 @@
 ---
-import Badge from "../components/Badge.astro";
+import AboutMe from "../components/AboutMe.astro";
 import Experience from "../components/Experience.astro";
+import Hero from "../components/Hero.astro";
 import Projects from "../components/Projects.astro";
 import SectionContainer from "../components/SectionContainer.astro";
-import SocialPill from "../components/SocialPill.astro";
+import TitleSection from "../components/TitleSection.astro";
 import Briefcase from "../icons/Briefcase.astro";
 import Code from "../icons/Code.astro";
-import GitHub from "../icons/GitHubIcon.astro";
-import LinkedIn from "../icons/LinkedInIcon.astro";
-import Mail from "../icons/MailIcon.astro";
+import ProfileCheck from "../icons/ProfileCheck.astro";
 import Layout from "../layouts/Layout.astro";
 
 // Welcome to Astro! Wondering what to do next? Check out the Astro documentation at https://docs.astro.build
@@ -17,57 +16,35 @@ import Layout from "../layouts/Layout.astro";
 
 <Layout>
   <main class="px-4">
-    <SectionContainer class:list={"py-44 pb-32"}>
-      <h1
-        class="text-white text-3xl md:text-4xl lg:text-5xl font-bold flex flex-row gap-x-4 pb-6 lg:pb-10"
-      >
-        Hey, soy Agustin Meikle 
-        <a
-          href="https://www.linkedin.com/in/agustin-meikle/"
-          target="_blank"
-          rel="noopener"
-          class="flex justify-center items-center"
-        >
-          <!-- <Badge>Disponible para trabajar</Badge> -->
-        </a>
-      </h1>
-      <h2 class="text-xl lg:text-2xl opacity-90 text-wrap max-w-[700px]">
-        <span class="text-white">+1 año de experiencia.</span>
-        <span class="text-green-200">Desarrollador Web.</span>
-        <span class="text-blue-200">De Mar del Plata, Argentina.</span>
-        <span class="opacity-65">Especializado en crear aplicaciones únicas.</span>
-      </h2>
-
-      <nav class="flex gap-4 mt-8 flex-wrap">
-        <SocialPill href="https://www.linkedin.com/in/agustin-meikle/">
-          <LinkedIn class:list={["size-4 md:size-6 mr-2"]} />
-          LinkedIn
-        </SocialPill>
-        <SocialPill href="https://github.com/AgusMeikle">
-          <GitHub class:list={["size-4 md:size-6 mr-2"]} />
-          GitHub
-        </SocialPill>
-        <SocialPill href="mailto:agusmeikle@gmail.com">
-          <Mail class:list={["size-4 md:size-6 mr-2"]} />
-          agusmeikle@gmail.com
-        </SocialPill>
-      </nav>
+    <SectionContainer class="py-16 md:py-36">
+      <Hero>
+        <slot />
+      </Hero>
     </SectionContainer>
+    <div class="space-y-24">
+      <SectionContainer id="experiencia">
+        <TitleSection>
+          <Briefcase class="size-8" />
+          Experiencia laboral
+        </TitleSection>
+        <Experience />
+      </SectionContainer>
+      
+      <SectionContainer id="proyectos">
+        <TitleSection>
+          <Code class="size-7" />
+          Proyectos
+        </TitleSection>
+        <Projects />
+      </SectionContainer>
 
-    <SectionContainer id="experiencia">
-      <h2 class="text-3xl font-semibold mb-6 flex gap-x-3 items-center">
-        <Briefcase class:list={["size-7"]} />
-        Experiencia laboral
-      </h2>
-      <Experience />
-    </SectionContainer>
-
-    <SectionContainer id="proyectos">
-      <h2 class="text-3xl font-semibold mb-6 flex gap-x-3 items-center">
-        <Code class:list={["size-7"]} />
-        Proyectos
-      </h2>
-      <Projects />
-    </SectionContainer>
+      <SectionContainer id="sobre-mi">
+        <TitleSection>
+          <ProfileCheck class="size-8" />
+          Sobre mí
+        </TitleSection>
+        <AboutMe />
+      </SectionContainer>
+    </div>
   </main>
 </Layout>
