--- a/src/components/AboutMe.astro
+++ b/src/components/AboutMe.astro
@@ -7,12 +7,12 @@ const personalImageAlt = "Agustín Meikle"
     class="[&>p]:mb-4 [&>p>strong]:text-blue-500 dark:[&>p>strong]:text-blue-300/80 [&>p>strong]:font-normal [&>p>strong]:font-mono text-pretty order-2 md:order-1"
   >
     <p>
-      Me llamo Agustin Meikle pero mis amigos me suelen decir Agus/Meik/Uru. Mi comienzo en la programación fue al ver la película "Grandes Héroes", cuando tenía 11 años. Actualmente estoy
+      Me llamo Agustin Meikle soy de Uruguay pero vivo en Mar del Plata, Argentina. Mi comienzo en la programación fue al ver la película "Grandes Héroes", cuando tenía 11 años. Actualmente estoy
       <strong>trabajando en la mantención y mejoras de plataformas web</strong>.
     </p>
 
     <p>
-      Uno de mis principales logros fue <strong>recibirme de la Facultad Tecnológica Nacional de Mar del Plata como Técnico en Programación</strong>. Ya que me ayudó a entender y profundizar mis conocimientos en programación.
+      Uno de mis principales logros fue <strong>recibirme de la Facultad Tecnológica Nacional de Mar del Plata como Técnico en Programación</strong>. Esto me ayudó a entender y profundizar mis conocimientos en programación.
     </p>
 
     <p>
