--- a/src/components/ExperienceItem.astro
+++ b/src/components/ExperienceItem.astro
@@ -1,5 +1,5 @@
 ---
-import LinkInline from "./LinkInLine.astro"
+import LinkInline from "@/components/LinkInLine.astro"
 
 interface Props {
   title: string
