--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -1,14 +1,14 @@
 ---
-import Html from "../icons/HtmlIcon.astro";
-import Css from "../icons/Css.astro";
-import Scss from "../icons/Scss.astro";
-import LinkButton from "./LinkButton.astro";
-import GitHubIcon from "../icons/GitHubIcon.astro";
-import Link from "../icons/Link.astro";
-import Angular from "../icons/Angular.astro";
-import MySql from "../icons/MySql.astro";
-import NodeJS from "../icons/NodeJS.astro";
-import JavaScript from "../icons/JavaScript.astro";
+import Html from "@/icons/HtmlIcon.astro";
+import Css from "@/icons/Css.astro";
+import Scss from "@/icons/Scss.astro";
+import LinkButton from "@/components/LinkButton.astro";
+import GitHubIcon from "@/icons/GitHubIcon.astro";
+import Link from "@/icons/Link.astro";
+import Angular from "@/icons/Angular.astro";
+import MySql from "@/icons/MySql.astro";
+import NodeJS from "@/icons/NodeJS.astro";
+import JavaScript from "@/icons/JavaScript.astro";
 
 const TAGS = {
   HTML: {
@@ -67,7 +67,7 @@ const PROJECTS = [
   {
     title: "AFRAM - Group",
     description:
-      "Un sistema de Home Banking ofreciendo una experiencia de usuario fluida y segura. Donde puede crear y gestionar cuentas, realizar transferencias, visualizar transacciones y más. <em>Proyecto realizado en equipo.</em>",
+      "Un sistema de Home Banking ofreciendo una experiencia de usuario fluida y segura. Donde puede crear y gestionar cuentas, realizar transferencias, visualizar transacciones y más. <small>Proyecto realizado en equipo.</small>",
     colabs: [COLABS[0], COLABS[1], COLABS[2]],
     link: "https://youtu.be/iQ0bQvBdtXQ?si=qyUShoVZ4FqYROe2",
     github: "https://github.com/AgustinaHourcade/AFRAM-Group",
