--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -10,6 +10,7 @@ const currentYear = new Date().getFullYear()
     <span class="text-sm sm:text-center text-zinc-800/90 dark:text-zinc-200/90"
       >&copy; {currentYear}
       <a href="https://www.linkedin.com/in/agustin-meikle/" target="_blank" class="hover:underline">Agustín Meikle</a>.
+      Todos los derechos reservados.
     </span>
     <ul
       class="flex flex-wrap items-center mt-3 text-sm font-medium dark:text-white/90 sm:mt-0"
