chore: update astro version and add LinkedIn image
feat: enhance AboutMe component with updated text

feat: refactor Hero component to use local LinkedIn image and restructure layout

feat: add Skills component to showcase technical skills with animations

fix: adjust index.astro to include Skills section and improve layout structure

--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -11,41 +11,40 @@ const personalImageAlt = "Agustín Meikle";
   <div class="flex gap-4 mb-4">
     <img
       class="rounded-full shadow-lg size-16"
-      src="https://media.licdn.com/dms/image/v2/D4D03AQEx_v7TPRiCtw/profile-displayphoto-shrink_200_200/B4DZVx1JO6HwAY-/0/1741371512556?e=1762387200&v=beta&t=igaQXTk3YA2ROJ609hazj8m6iY2tdo87a2NVeymjzw0"
+      src="/me_LinkedIn.jpeg"
       alt={personalImageAlt}
     />
-    <a
-      href="https://linkedin.com/in/midudev"
+    <!-- <a
+      href="https://www.linkedin.com/in/agustin-meikle/"
       target="_blank"
       rel="noopener"
       class="flex items-center transition md:justify-center md:hover:scale-105"
-    >
-      <!-- <Badge>Disponible para trabajar</Badge> -->
-    </a>
+    > -->
+    <!-- <Badge>Disponible para trabajar</Badge> -->
   </div>
-  <h1
-    class="text-4xl font-bold tracking-tight text-gray-800 sm:text-5xl dark:text-white"
-  >
-    Hola! Soy Agus
-  </h1>
-  <p
-    class="mt-6 text-xl text-gray-800 dark:[&>strong]:text-blue-200 [&>strong]:text-blue-500 [&>strong]:font-semibold dark:text-gray-300"
-  >
-    +1 año de experiencia. <strong>Desarrollador Web</strong> de Mar del Plata, Argentina.
-    Especializado en crear aplicaciones únicas.
-  </p>
-  <nav class="flex flex-wrap gap-4 mt-8">
-    <SocialPill href="mailto:agusmeikle@gmail.com">
-      <MailIcon class="size-4" />
-      agusmeikle@gmail.com
-    </SocialPill>
-    <SocialPill href="https://www.linkedin.com/in/agustin-meikle/">
-      <LinkedInIcon class="size-4" />
-      LinkedIn
-    </SocialPill>
-    <SocialPill href="https://github.com/AgusMeikle">
-      <GitHub class:list={["size-4 md:size-6 mr-2"]} />
-      GitHub
-    </SocialPill>
-  </nav>
 </div>
+<h1
+  class="text-4xl font-bold tracking-tight text-gray-800 sm:text-5xl dark:text-white"
+>
+  Hola! Soy Agus
+</h1>
+<p
+  class="mt-6 text-xl text-gray-800 dark:[&>strong]:text-blue-200 [&>strong]:text-blue-500 [&>strong]:font-semibold dark:text-gray-300"
+>
+  +1 año de experiencia. <strong>Desarrollador Web</strong> de Mar del Plata, Argentina.
+  Especializado en crear aplicaciones únicas.
+</p>
+<nav class="flex flex-wrap gap-4 mt-8">
+  <SocialPill href="mailto:agusmeikle@gmail.com">
+    <MailIcon class="size-4" />
+    agusmeikle@gmail.com
+  </SocialPill>
+  <SocialPill href="https://www.linkedin.com/in/agustin-meikle/">
+    <LinkedInIcon class="size-4" />
+    LinkedIn
+  </SocialPill>
+  <SocialPill href="https://github.com/AgusMeikle">
+    <GitHub class:list={["size-4 md:size-6 mr-2"]} />
+    GitHub
+  </SocialPill>
+</nav>
