--- a/src/components/AboutMe.astro
+++ b/src/components/AboutMe.astro
@@ -7,7 +7,7 @@ const personalImageAlt = "Agustín Meikle"
     class="[&>p]:mb-4 [&>p>strong]:text-blue-500 dark:[&>p>strong]:text-blue-300/80 [&>p>strong]:font-normal [&>p>strong]:font-mono text-pretty order-2 md:order-1"
   >
     <p>
-      Me llamo Agustin Meikle soy de Uruguay pero vivo en Mar del Plata, Argentina. Mi comienzo en la programación fue al ver la película "Grandes Héroes", cuando tenía 11 años. Actualmente estoy
+      Me llamo Agustin Meikle soy de Uruguay pero vivo en Mar del Plata, Argentina. Mi comienzo en la programación fue al ver la película "Grandes Héroes". Actualmente estoy
       <strong>trabajando en la mantención y mejoras de plataformas web</strong>.
     </p>
 
