--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -39,14 +39,7 @@ import Layout from "../layouts/Layout.astro";
         <Projects />
       </SectionContainer>
 
-      <!-- <SectionContainer id="habilidades">
-        <TitleSection>
-          <Code class="size-8" />
-          Habilidades
-        </TitleSection>
-        <Skills>
-      </SectionContainer> -->
-      <SectionContainer>
+      <SectionContainer id="habilidades">
         <TitleSection>
           <Code class="size-8" />
           Habilidades
